push for fixes to scatter points

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                         </select>   
                     </form> 
                     <br>
-                    <button type="button">Add Point</button>
+                    <button type="button" class="add-point">Add Point</button>
                 </div>
             </div>
             
-            <div class="bar">
+            <div class="bar-chart">
 
             </div>
 
