--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <h5>Acknowledgments</h5>
         <div>
             <ul>
-                <li><a href="https://www.w3schools.com/graphics/svg_intro.asp">Resource 1</a></li>
-                <li><a href="https://learn-the-web.algonquindesign.ca/topics/advanced-svg/">Resource 2</a></li>
+                <li><a href="https://www.tutorialsteacher.com/d3js/create-bar-chart-using-d3js">Resource 1</a></li>
+                <li><a href="https://www.youtube.com/watch?v=i0GdXYgw924&t=654s">Resource 2</a></li>
                 <li><a href="https://forum.freecodecamp.org/t/appended-element-is-visible-in-document-but-not-visible-visually/276141">Resource 3</a></li>
             </ul>
         </div>
